[gd_scene load_steps=17 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.gd" type="Script" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://Lifes.gd" type="Script" id=8]
[ext_resource path="res://art/heart.png" type="Texture" id=9]
[ext_resource path="res://Power.tscn" type="PackedScene" id=10]

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 479, 1 )
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 42
outline_color = Color( 0.0941176, 0.207843, 0.486275, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=4]
action = "start_game"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
mob_scene = ExtResource( 4 )
power_scene = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="PowerTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="PowerPath" type="Path2D" parent="."]
curve = SubResource( 7 )

[node name="PowerSpawnLocation" type="PathFollow2D" parent="PowerPath"]
position = Vector2( -1, 1 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="ScoreDisplay" type="Label" parent="HUD"]
margin_left = 331.0
margin_top = 2.0
margin_right = 476.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="HUD"]
margin_left = 8.0
margin_top = 240.0
margin_right = 475.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 2 )
text = "Dooge the  creep"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLifes" type="Label" parent="HUD"]
visible = false
margin_left = 4.0
margin_top = 5.0
margin_right = 149.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 2 )
text = "3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HUD"]
margin_left = 146.0
margin_top = 496.0
margin_right = 326.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="HUD"]
margin_left = 135.0
margin_top = 603.0
margin_right = 346.0
margin_bottom = 687.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
shortcut = SubResource( 5 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="HUD"]
wait_time = 2.0
one_shot = true

[node name="Lifes" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts" type="TextureRect" parent="HUD/Lifes"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingPage" type="Container" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="life_changed" from="." to="HUD/Lifes" method="on_player_life_changed"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_PowerTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_StartButton_pressed"]
[connection signal="pressed" from="HUD/SettingsButton" to="HUD" method="_on_Settings_pressed"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_MessageTimer_timeout"]
